--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,6 +1,6 @@
 {
 	"start.message": {
-		"caption": "Привет",
+		"caption": "Привет!",
 		"description": "Я помогу тебе считать калории легко и просто.\nЕсли возникнут сложности, то воспользуйся командой /help"
 	},
 	"help.message": {
