--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,26 +1,15 @@
 {
 	"start.message": {
-		"caption": "Привет!",
+		"caption": "Привет!👋",
 		"description": "Я помогу тебе считать калории легко и просто.\nЕсли возникнут сложности, то воспользуйся командой /help"
 	},
 	"help.message": {
 		"description": "Для работы с ботом тебе обязательно пригодятся эти команды:\n"
 	},
 	"commands": [
-		{
-			"start": "/start - запуск бота"
-		},
-		{
-			"help": "/help - список всех команд с их описанием"
-		},
-		{
-			"help": "/help - список всех команд с их описанием"
-		},
-		{
-			"donat": "/donat - на поддержку и развитие"
-		},
-		{
-			"contacts": "/contacts - контакты для обратной связи"
-		}
+		"/start - запуск бота",
+		"/help - список всех команд с их описанием",
+		"/donat - на поддержку и развитие",
+		"/contacts - контакты для обратной связи"
 	]
 }
