--- a/locales/ru.json
+++ b/locales/ru.json
@@ -6,10 +6,30 @@
 	"help.message": {
 		"description": "Для работы с ботом тебе обязательно пригодятся эти команды:\n"
 	},
+	"user.interaction": {
+		"good-morning": "Доброе утро!",
+		"good-day": "Добрый день!",
+		"good-evening": "Добрый вечер!",
+		"bon.appetite": "Приятного аппетита!",
+		"error.commands": "Похоже, что вы ошиблись командой 🥺\nНайдите нужную в /help"
+	},
 	"commands": [
 		"/start - запуск бота",
 		"/help - список всех команд с их описанием",
-		"/donat - на поддержку и развитие",
-		"/contacts - контакты для обратной связи"
-	]
+		"/donat - на поддержку и развитие 🍪",
+		"/contacts - контакты для обратной связи 📨",
+		"/show - показать статистику за прошедшее время",
+		"/edit - редактировать статистику за день",
+		"/add - добавить приём пищи"
+	],
+	"commands.description": {
+		"add": "Хорошо! Напиши, что ты сейчас съел в формате [блюдо калорийность].\nПример:\nСалат 100\nМолоко 200\nПеченье 345",
+		"show": "Выбери период, за который ты хочешь получить статистику",
+		"show.button.day": "день",
+		"show.button.week": "неделя",
+		"show.button.month": "месяц",
+		"show.button.year": "год",
+		"donat": "Спасибо за поддержку и развитие 🍪!\n4276500044880837",
+		"contacts": "По всем вопросам и предложениям 📨\nnik_d@icloud.com"
+	}
 }
