Minor changes emoji/text in json

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -14,18 +14,19 @@
 		"error.commands": "Похоже, что вы ошиблись командой 🥺\nНайдите нужную в /help"
 	},
 	"commands": [
-		"/start - запуск бота",
+		"/start - запуск бота 🤖",
 		"/help - список всех команд с их описанием",
 		"/donat - на поддержку и развитие 🍪",
 		"/contacts - контакты для обратной связи 📨",
-		"/show - показать статистику за прошедшее время",
-		"/edit - редактировать статистику за день",
+		"/show - показать статистику за прошедшее время 🗓️",
+		"/edit - редактировать статистику за день 🖊️",
 		"/add - добавить приём пищи"
 	],
 	"commands.description": {
 		"add": "Хорошо! Напиши, что ты сейчас съел в формате [блюдо калорийность].\nПример:\nСалат 100\nМолоко 200\nПеченье 345",
 		"show": "Выбери период, за который ты хочешь получить статистику",
-		"show.button.day": "день",
+		"show.button.today": "сегодня",
+		"show.button.yesterday": "вчера",
 		"show.button.week": "неделя",
 		"show.button.month": "месяц",
 		"show.button.year": "год",
