Removed unused modules
Description: telegram get unixTime, but user can be in any time zone and unitTime does not fit him

--- a/locales/foods-emoji.json
+++ b/locales/foods-emoji.json
@@ -1,5 +1,5 @@
 {
-	"foods.emoji": [
+	"foods": [
 		"🍏",
 		"🍎",
 		"🍐",
@@ -96,24 +96,6 @@
 		"☕️",
 		"🍵",
 		"🧃",
-		"🥤",
-		"🍶",
-		"🍺",
-		"🍻",
-		"🥂",
-		"🍷",
-		"🥃",
-		"🍸",
-		"🍹",
-		"🧉",
-		"🍾",
-		"🧊",
-		"🥄",
-		"🍴",
-		"🍽",
-		"🥣",
-		"🥡",
-		"🥢",
-		"🧂"
+		"🥤"
 	]
 }
