--- a/locales/ru.json
+++ b/locales/ru.json
@@ -7,9 +7,6 @@
 		"description": "Для работы с ботом тебе обязательно пригодятся эти команды:\n"
 	},
 	"user.interaction": {
-		"good-morning": "Доброе утро!",
-		"good-day": "Добрый день!",
-		"good-evening": "Добрый вечер!",
 		"bon.appetite": "Приятного аппетита!",
 		"error.commands": "Похоже, что вы ошиблись командой 🥺\nНайдите нужную в /help"
 	},
@@ -23,7 +20,7 @@
 		"/add - добавить приём пищи"
 	],
 	"commands.description": {
-		"add": "Хорошо! Напиши, что ты сейчас съел в формате [блюдо калорийность].\nПример:\nСалат 100\nМолоко 200\nПеченье 345",
+		"add": "Хорошо. Напиши, что ты сейчас съел в формате [блюдо калорийность].\nПример:\nСалат 100\nМолоко 200\nПеченье 345",
 		"show": "Выбери период, за который ты хочешь получить статистику",
 		"show.button.today": "сегодня",
 		"show.button.yesterday": "вчера",
