Made correctly addScene

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -8,6 +8,7 @@
 	},
 	"user.interaction": {
 		"bon.appetite": "Приятного аппетита!",
+		"error.input": "Где-то тут есть ошибка. Введи ещё раз, пожалуйста",
 		"error.commands": "Похоже, что вы ошиблись командой 🥺\nНайдите нужную в /help"
 	},
 	"commands": [
