Made template show showScene

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -8,8 +8,9 @@
 	},
 	"user.interaction": {
 		"bon.appetite": "Приятного аппетита!",
-		"error.input": "Где-то тут есть ошибка. Введи ещё раз, пожалуйста",
-		"error.commands": "Похоже, что вы ошиблись командой 🥺\nНайдите нужную в /help"
+		"add.error.input": "Ты в режиме ввода данных. Для выхода из него введи данные или введи /end",
+		"error.commands": "Похоже, что вы ошиблись командой 🥺\nНайдите нужную в /help",
+		"bye": "Пока, удачи!"
 	},
 	"commands": [
 		"/start - запуск бота 🤖",
