Added new command: today

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -19,7 +19,8 @@
 		"/contacts - контакты для обратной связи 📨",
 		"/show - показать статистику за прошедшее время 🗓️",
 		"/edit - редактировать статистику за день 🖊️",
-		"/add - добавить приём пищи"
+		"/add - добавить приём пищи",
+		"/today - статистика и количество каллорий за день"
 	],
 	"commands.description": {
 		"add": "Хорошо. Напиши, что ты сейчас съел в формате [блюдо калорийность].\nПример:\nСалат 100\nМолоко 200\nПеченье 345",
