Added update for last_sign

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,13 +1,13 @@
 {
 	"start.message": {
-		"caption": "Привет!👋",
+		"caption": "Привет👋",
 		"description": "Я помогу тебе считать калории легко и просто.\nЕсли возникнут сложности, то воспользуйся командой /help"
 	},
 	"help.message": {
 		"description": "Для работы с ботом тебе обязательно пригодятся эти команды:\n"
 	},
 	"user.interaction": {
-		"bon.appetite": "Приятного аппетита!",
+		"bon.appetite": "Приятного аппетита",
 		"add.error.input": "Ты в режиме ввода данных. Для выхода из него введи данные или введи /end",
 		"error.commands": "Похоже, что вы ошиблись командой 🥺\nНайдите нужную в /help",
 		"bye": "Пока, удачи!"
@@ -30,7 +30,7 @@
 		"show.button.week": "неделя",
 		"show.button.month": "месяц",
 		"show.button.year": "год",
-		"donat": "Спасибо за поддержку и развитие 🍪!\n4276500044880837",
+		"donat": "Спасибо за поддержку и развитие 🍪\n4276500044880837",
 		"contacts": "По всем вопросам и предложениям 📨\nnik_d@icloud.com"
 	}
 }
