--- a/locales/ru.json
+++ b/locales/ru.json
@@ -10,7 +10,8 @@
 		"bon.appetite": "Приятного аппетита",
 		"add.error.input": "Ты в режиме ввода данных. Для выхода из него введи данные или введи /end",
 		"error.commands": "Похоже, что вы ошиблись командой 🥺\nНайдите нужную в /help",
-		"bye": "Пока, удачи!"
+		"bye": "Пока, удачи!",
+		"untracked.user": "Кажется, что вы тут новенький. Воспользуйтесь командой /start для регистрации"
 	},
 	"commands": [
 		"/start - запуск бота 🤖",
