Fixed getDayValueFromJson, setDayValueToJson. Added check to user in /today and /add. Added new ui in ru.json. Command /add and /today is working correct

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -11,7 +11,12 @@
 		"add.error.input": "Ты в режиме ввода данных. Для выхода из него введи данные или введи /end",
 		"error.commands": "Похоже, что вы ошиблись командой 🥺\nНайдите нужную в /help",
 		"bye": "Пока, удачи!",
-		"untracked.user": "Кажется, что вы тут новенький. Воспользуйтесь командой /start для регистрации"
+		"untracked.user": "Кажется, что вы тут новенький. Воспользуйтесь командой /start для регистрации",
+		"today.calories": {
+			"start": "Вы за сегодня съели",
+			"end": "каллорий",
+			"description": "Для более подробной информации воспользуйтесь командой /show"
+		}
 	},
 	"commands": [
 		"/start - запуск бота 🤖",
