--- a/locales/ru.json
+++ b/locales/ru.json
@@ -16,7 +16,9 @@
 			"start": "Вы за сегодня съели",
 			"end": "каллорий",
 			"description": "Для более подробной информации воспользуйтесь командой /show"
-		}
+		},
+		"edit.command": "Скопируйте сообщение от бота, отредактируйте его и снова отправьте",
+		"edit.success": "Изменение произошло успешно!"
 	},
 	"commands": [
 		"/start - запуск бота 🤖",
@@ -36,7 +38,7 @@
 		"show.button.week": "неделя",
 		"show.button.month": "месяц",
 		"show.button.year": "год",
-		"donat": "Спасибо за поддержку и развитие 🍪\n4276500044880837",
+		"donat": "Спасибо за поддержку и развитие 🍩\n4276500044880837",
 		"contacts": "По всем вопросам и предложениям 📨\nnik_d@icloud.com"
 	}
 }
