--- a/locales/ru.json
+++ b/locales/ru.json
@@ -18,7 +18,8 @@
 			"description": "Для более подробной информации воспользуйтесь командой /show"
 		},
 		"edit.command": "Скопируйте сообщение от бота, отредактируйте его и снова отправьте",
-		"edit.success": "Изменение произошло успешно!"
+		"edit.success": "Изменение произошло успешно!",
+		"edit.value.empty": "Упс. Кажется, за сегодня ничего нет. Воспользуйтесь командой /add"
 	},
 	"commands": [
 		"/start - запуск бота 🤖",
