Moved buttons text to locales and removed some trash

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -6,6 +6,12 @@
 	"help.message": {
 		"description": "Для работы с ботом тебе обязательно пригодятся эти команды:\n"
 	},
+	"show.buttons": {
+		"year": "Год",
+		"month": "Месяц",
+		"week": "Неделя",
+		"day": "День"
+	},
 	"user.interaction": {
 		"bon.appetite": "Приятного аппетита",
 		"add.error.input": "Ты в режиме ввода данных. Для выхода из него введи данные или введи /end",
